# RPI_-1

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
Analysis/: extract_cifar.py  extract_mnist.py  randomize_labels.py  randomize_pixels.py
RETHINKING_GENERALIZATION/: __init__.py  config.py  dataset.py
RETHINKING_GENERALIZATION/modeling/: MLP.py  alexnet.py  plots.py  train.py  trainUI.py
RETHINKING_GENERALIZATION/modules/: extract_cifar.py  extract_mnist.py  pixel_shuffle.py  randomize_labels.py  randomize_pixels.py
notebooks/: visual_tests.ipynb
tests/: test_label_randomization.py  test_pixel_randomization.py  test_pixel_shuffle.py
